Ajustes finais antes de voltar ao fluxo